:art: estructura final
se creo la estructura final del proyecto

--- a/index.html
+++ b/index.html
@@ -7,8 +7,80 @@
 		<meta http-equiv="X-UA-Compatible"
 			  content="ie=edge">
 		<title>My Team Page</title>
+		<link rel="shortcut icon"
+			  href="devchallenges.png"
+			  type="image/x-icon">
+		<link rel="stylesheet"
+			  href="styles/styles.css">
 	</head>
 	<body>
-	
+		<header class="header container">
+			<div class="header__container">
+				<h1>The creative crew</h1>
+				<div class="header__info">
+					<h2>Who we are</h2>
+					<p>We are team of creatively diverse. driven. innovative individuals working in various locations
+					   from
+					   the
+					   world.</p>
+				</div>
+			</div>
+		</header>
+		
+		<section class="team ">
+			<div class="team__container">
+				<div class="team__box">
+					<figure class="team__box-image">
+						<img src="images/photo1.png"
+							 alt="Product Owner Bill Mahoney">
+						<figcaption class="team__box-name">Bill Mahoney</figcaption>
+					</figure>
+					<h3 class="team__box-title">Product owner</h3>
+				</div>
+				<div class="team__box">
+					<figure class="team__box-image">
+						<img src="images/photo2.png"
+							 alt="Product Owner Bill Mahoney">
+						<figcaption class="team__box-name">Saba Cabrera</figcaption>
+					</figure>
+					<h3 class="team__box-title">Art director</h3>
+				</div>
+				<div class="team__box">
+					<figure class="team__box-image">
+						<img src="images/photo3.png"
+							 alt="Product Owner Bill Mahoney">
+						<figcaption class="team__box-name">Shae Le</figcaption>
+					</figure>
+					<h3 class="team__box-title">Tech Lead</h3>
+				</div>
+				<div class="team__box">
+					<figure class="team__box-image">
+						<img src="images/photo4.png"
+							 alt="Product Owner Bill Mahoney">
+						<figcaption class="team__box-name">Skylah Lu</figcaption>
+					</figure>
+					<h3 class="team__box-title">UX Designer</h3>
+				</div>
+				<div class="team__box">
+					<figure class="team__box-image">
+						<img src="images/photo5.png"
+							 alt="Product Owner Bill Mahoney">
+						<figcaption class="team__box-name">Griff Richards</figcaption>
+					</figure>
+					<h3 class="team__box-title">Developer</h3>
+				</div>
+				<div class="team__box">
+					<figure class="team__box-image">
+						<img src="images/photo6.png"
+							 alt="Product Owner Bill Mahoney">
+						<figcaption class="team__box-name">Stan John</figcaption>
+					</figure>
+					<h3 class="team__box-title">Developer</h3>
+				</div>
+			</div>
+		</section>
+		<footer class="credits container">
+			<h4>created by <strong>soydavidpaucar</strong> - devChallenges.io</h4>
+		</footer>
 	</body>
-</html>
+</html> 
